feat: update logos
Resolves: #BZ-Init-0

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<p-menubar>
+<p-menubar [model]="[]">
   <ng-template pTemplate="start">
     <img src="assets/images/logo.png" height="45" class="p-mr-2" />
   </ng-template>
