feat: add e-comm and storefront components and enhance layout
Resolves: #INIT-0000

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,2 +1,8 @@
-<bz-menu></bz-menu>
-<router-outlet></router-outlet>
+<div class="layout">
+  <header>
+    <bz-menu></bz-menu>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
