feat: update routes add login/signup guard
Resolves: #INIT-0000

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <ng-template pTemplate="start">
     <img
       src="assets/images/logo.png"
-      [routerLink]="['/dashboard']"
+      [routerLink]="['']"
       height="45"
       class="brand"
     />
